[package]
name = "ag-iso-stack"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Free ISO-11783 and J1939 CAN Stack"
keywords = ["agriculture", "can", "canbus", "isobus", "j1939", "agritech", "smart-farming", "iso11783"]

[dependencies]
bitvec = "1.0.1"
rand = "0.8.5"
socketcan = { version = "2.0.0", optional = true }
strum_macros = "0.25.2"
tracing = { version = "0.1.37", optional = true }

[features]
default = []
# Socketcan driver
socketcan = ["dep:socketcan"]
# Optional logging instrumentation
tracing = ["dep:tracing"]

[dev-dependencies]
clap = { version = "4.3.19", features = ["derive"] }
ctrlc = "3.4.0"
tracing-subscriber = "0.3.17"

[[example]]
name = "forward"
required-features = ["socketcan", "tracing"]
