[package]
name = "ag-iso-stack"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Free ISO-11783 and J1939 CAN Stack"
keywords = ["agriculture", "can", "canbus", "isobus", "j1939", "agritech", "smart-farming", "iso11783"]

[dependencies]
bitvec = "1.0.1"
rand = "0.8.5"
strum_macros = "0.25.2"
embedded-can = "0.4.1"

[features]
default = []

[dev-dependencies]
clap = { version = "4.3.19", features = ["derive"] }
ctrlc = "3.4.0"
# TODO: Add optional tracing to the main library
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[target.'cfg(unix)'.dev-dependencies]
socketcan = { version = "3.3.0" }

[[example]]
name = "forward"
